--- a/injector/Cargo.toml
+++ b/injector/Cargo.toml
@@ -7,5 +7,6 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+simple_injector = { path = "../../simple_injector" }
 memory-rs = { git = "https://github.com/etra0/memory-rs" }
 winapi = { version = "0.3", features = ["winuser", "libloaderapi", "errhandlingapi", "winbase", "impl-default"] }
